...
}

@Composable
fun AppBarDrawerIcon(onDrawerClick: () -> Unit, isClosed: Boolean) {
    IconButton(
        onClick = onDrawerClick,
        modifier = Modifier.testTag("drawer_handle"),
    ) {
        Icon(
            imageVector = Icons.Filled.Menu,
            contentDescription = stringResource(
                if (isClosed) {
                    R.string.drawer_open
...
